[gd_scene load_steps=4 format=3 uid="uid://bvqfok7ytk0f6"]

[ext_resource type="Script" path="res://screens/start/start_screen.gd" id="1_bqbod"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6pcjy"]
bg_color = Color(1, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gx4xt"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="StartScreen" type="Node2D"]
script = ExtResource("1_bqbod")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_6pcjy")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="GridContainer" type="GridContainer" parent="PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 9

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(1152, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="SlotButtonContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
columns = 4

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_gx4xt")

[node name="PlayButton" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Play!"

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Quit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer/QuitButton" to="." method="_on_quit_button_pressed"]
